# cmake-self-study-note

./: CMakeLists.txt  README.md
helloworld及很多解释/: CMakeLists.txt  bat.bat
helloworld及很多解释/hello/: CMakeLists.txt  main.cpp
helloworld及很多解释/hello_call_shared/: CMakeLists.txt  main.cpp
helloworld及很多解释/hello_call_static/: CMakeLists.txt  main.cpp
helloworld及很多解释/lib_hello_shared/: CMakeLists.txt  hello.h
helloworld及很多解释/lib_hello_static/: CMakeLists.txt  hello.c  hello.h
针对helloworld及很多解释的一个完整项目示例/: CMakeLists.txt  readme.txt  run.bat
针对helloworld及很多解释的一个完整项目示例/include/: person.h
针对helloworld及很多解释的一个完整项目示例/src/: CMakeLists.txt
针对helloworld及很多解释的一个完整项目示例/src/main/: CMakeLists.txt  main.cpp
针对helloworld及很多解释的一个完整项目示例/src/person/: CMakeLists.txt  person.cpp
